--- a/Restaurante/principal/templates/inicioCliente.html
+++ b/Restaurante/principal/templates/inicioCliente.html
@@ -12,13 +12,12 @@
 </div>
 
 <div class="container">
-    <div class="row justify-content-center"> <!-- Agrega justify-content-center aquí -->
+    <div class="row justify-content-center">
         <div class="col-md-6 border">
             <div class="card">
                 <div class="card-body bg-warning-subtle">
                     <h2 class="card-title text-center text-warning">Platos Principales</h2>
                     <div class="row">
-                        <!-- Itera sobre los platos principales en la base de datos -->
                         {% for menu in platos_principales %}
                             <div class="col-md-3 mb-4">
                                 <div class="card">
